# Zed_First_Commit

./: README.md
docs/: package-lock.json
docs/.vercel/: project.json
gpui/: Cargo.toml
